--- a/src/home.html
+++ b/src/home.html
@@ -11,6 +11,10 @@
 			           <div class="main-section__title">Welcome to Boosted USA</div>
 					     <div class="main-section__subtitle">The Holy Grail of Electric Skateboards 
 							and One REVolutionary Scooter</div>
+							<div class="buttons">
+								<a href="#">BOOSTED REVS</a>
+								<a href="#">BOOSTED BOARDS</a>
+							</div>
 				</section>
 			</main>
 			@@include('html/_footer.htm',{})
