--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,4 +1,5 @@
 <header class="header">
+	<div class="header__wrapper">
 	<div class="header__container">
 		<div class="header__top"><p>Financing option available at checkout.</p></div>
 		<nav class="header__inner">
@@ -20,12 +21,13 @@
 			<img src="@img/Frame.svg" alt="">
 			<img src="@img/cart.svg" alt="">
 		</div>
-		
+		<button type="button" class="menu__icon icon-menu"><span></span></button>
 		</nav>
 
 		  
-			<button type="button" class="menu__icon icon-menu"><span></span></button>
+		
  
 
 	</div>
+</div>
 </header>
