add second block

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,14 +1,17 @@
+
+
+
 <header class="header">
 	<div class="header__wrapper">
 	<div class="header__container">
 		<div class="header__top"><p>Financing option available at checkout.</p></div>
 		<nav class="header__inner">
-      <div class="header__logo">
+      <div class="header__logo anima">
 			<img src="@img/logo.png" alt="">
 		</div>
 		<div class="header__menu menu">
 			<nav class="menu__body">
-				<ul class="menu__list">
+				<ul class="menu__list anima">
 					<li class="menu__item"><a href="" class="menu__link">Electric Skateboards</a></li>
 					<li class="menu__item"><a href="" class="menu__link">Electric Scooters</a></li>
 					<li class="menu__item"><a href="" class="menu__link">Accessories</a></li>
@@ -17,7 +20,7 @@
 				</ul>
 			</nav>
 		</div>
-		<div class="header__carts">
+		<div class="header__carts anima">
 			<img src="@img/Frame.svg" alt="">
 			<img src="@img/cart.svg" alt="">
 		</div>
